--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'bebas-neue';
+  src: local('bebas-neue'), url(./BebasNeue-Regular.ttf) format('truetype');
+  -webkit-font-smoothing: antialiased;
+}
+
 .App {
   text-align: center;
 }
@@ -36,3 +42,4 @@
     transform: rotate(360deg);
   }
 }
+
